# ffmpeg_encoder_plugin

./: .gitignore  CMakeLists.txt  README.md  av1_encoder.cpp  av1_encoder.h  av1_nvenc_encoder.cpp  av1_nvenc_encoder.h  encoder_info.h  ffmpeg_encoder.cpp  ffmpeg_encoder.h  h264_encoder.cpp  h264_encoder.h  h264_nvenc_encoder.cpp  h264_nvenc_encoder.h  h265_encoder.cpp  h265_encoder.h  h265_nvenc_encoder.cpp  h265_nvenc_encoder.h  pixel_format_repacker.cpp  pixel_format_repacker.h  plugin.cpp  svt_av1_encoder.cpp  svt_av1_encoder.h  uisettings_controller.cpp  uisettings_controller.h  x264_encoder.cpp  x264_encoder.h  x265_encoder.cpp  x265_encoder.h
.github/workflows/: build-static.yml
wrapper/: CMakeLists.txt  host_api.cpp  host_api.h
